--- a/SHAKER.HTML
+++ b/SHAKER.HTML
@@ -10,5 +10,6 @@
     <h2>SHAKER WILL BE WAB</h2>
     <H1>THIS IS MY FIRST PROJECT</H1>
     <P>LET,S GO FOR PARTY.</P>
+    <img src="CR7.JPG">
 </body>
 </html>
